--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -3,6 +3,7 @@ body {
     color: #ffffff;
     font-size: 0.93rem;
     overflow-x: hidden;
+    text-shadow: 2px 2px 4px rgba(0,0,0,.45);
 }
 
 
@@ -293,8 +294,21 @@ a.text-custom3:hover {
 }
 
 
+
+
+/* #main {
+    background-image: url('/img/defcon2023.jpg');
+    background-repeat: no-repeat;
+    background-size: contain;
+} */
+
+/* #162033 */
+
 #main-content {
-    background-color: #0a0c1f;
+    /* background-color: rgba(0,0,0,0.2); */
+    /* background: linear-gradient(180deg, rgba(22,32,51,0) 0%, rgba(22,32,51,0) 95%, rgba(22,32,51,1) 100%); */
+
+    /* background-color: #0a0c1f; */
     /* border: 1px solid #f00; */
     /* overflow-y: auto; */
     padding-bottom: 100px;
@@ -304,9 +318,22 @@ a.text-custom3:hover {
 }
 
 
+#main-content .logo {
+    color: #fff;
+    text-shadow: 2px 2px 4px rgba(0,0,0,.45);
+}
+#main-content .slogan {
+    color: #fff;
+    text-shadow: 2px 2px 4px rgba(0,0,0,.45);
+}
+#main-content h1 {
+    color: #fff;
+    text-shadow: 2px 2px 4px rgba(0,0,0,.45);
+}
+
 
 #topbar {
-    border-bottom: 2px solid #141729;
+    /* border-bottom: 2px solid #141729; */
     position: fixed;
     top:0;
 
