--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -480,9 +480,9 @@ xxl: 1400px
     }
 }
 @media all and (max-width: 1210px) {
-    .topbar-contributors {
+    /* .topbar-contributors {
         display:none;
-    }
+    } */
     .topbar-newsletter {
         display:none;
     }
